--- a/Projeto-React/package.json
+++ b/Projeto-React/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://gabrielraulino.github.io/Projeto-React/",
   "name": "projeto-react",
   "private": true,
   "version": "0.0.0",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeply": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
