--- a/Calculadora/package.json
+++ b/Calculadora/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://gabrielraulino.github.io/Projeto-React/",
-  "name": "projeto-react",
+  "name": "calculadora",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeply": "npm run build",
-    "deploy": "main -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
